# Berthmanager_ubantu14

./: CMakeLists.txt  add_detetion.cpp  add_detetion.h  add_detetion.ui  add_model.cpp  add_model.h  add_model.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h  openglwindow.cpp  openglwindow.h  qdoubleslider.cpp  qdoubleslider.h
